# CS4630-Smartphone-Hearing-Aid

./: CustomLSTM.cpp  README.md  h8d5.th  network.cpp  network.h  settings.gradle.kts  weights.txt
app/: build.gradle.kts
app/src/androidTest/java/com/example/hearingaidapplication/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioEngine.cpp  AudioEngine.h  CMakeLists.txt  Oscillator.cpp  Oscillator.h  hearingaidapplication.cpp  jni-bridge.cpp  network.cpp  network.h  weights.txt
app/src/main/cpp/include/: network.h
app/src/main/java/com/example/hearingaidapplication/: AndroidAudioPlayer.kt  AudioPlayer.kt  MainActivity.kt  TestStreaming.kt
app/src/main/java/com/example/hearingaidapplication/playback/: AndroidAudioPlayer.kt  AudioPlayer.kt
app/src/main/java/com/example/hearingaidapplication/recorder/: AndroidAudioRecorder.kt  AudioRecorder.kt  WavRecorder.kt
app/src/main/java/com/example/hearingaidapplication/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/drawable/: custom_button.xml  custom_button2.xml
app/src/main/res/layout/: activity_main.xml  activity_record.xml
app/src/main/res/menu/: main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/hearingaidapplication/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
